--- a/views/new.erb
+++ b/views/new.erb
@@ -6,7 +6,8 @@
     <form method="post" action="/student">
       Student Name: <input type="text" name="student[name]">
       Student Grade: <input type="text" name="student[grade]">
-      Course Name: <input type="text" name="student[course][name]"
+      Course Name: <input type="text" name="student[course][name]">
+      Course Topic: 
       <input type="submit">
 </body>
 </html>
