--- a/views/new.erb
+++ b/views/new.erb
@@ -6,8 +6,10 @@
     <form method="post" action="/student">
       Student Name: <input type="text" name="student[name]">
       Student Grade: <input type="text" name="student[grade]">
-      Course Name: <input type="text" name="student[course][name]">
-      Course Topic: <input type="text" name="student[course][topic]"
+      Course Name: <input type="text" name="student[course][][name]">
+      Course Topic: <input type="text" name="student[course][][topic]">
+      Course Name: <input type="text" name="student[course][][name]">
+      Course Topic: <input type="text" name="student[course][][topic]">
       <input type="submit">
 </body>
 </html>
