--- a/views/student.erb
+++ b/views/student.erb
@@ -1,3 +1,4 @@
 <h1>Student<h1>
-  <div class="student"?
+  <div class="student">
     <h3>Name: <%= @student.name %></h3><br>
+    <h4>Grade: <%= @student.grade %></h4>
