--- a/views/student.erb
+++ b/views/student.erb
@@ -7,4 +7,5 @@
 <h1>Courses</h1>
 <% @courses.each do |course| %>
   <div class="course">
-    <p>Name: <%= course.name %></p></br>
+    <p>Name: <%= course.name %> </p></br>
+    <p>Topic: <%= course.topic %></p><br>
