--- a/views/student.erb
+++ b/views/student.erb
@@ -9,3 +9,5 @@
   <div class="course">
     <p>Name: <%= course.name %> </p></br>
     <p>Topic: <%= course.topic %></p><br>
+  </div><br>
+<% end %>
