automatically backed up by learn

--- a/views/student.erb
+++ b/views/student.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <h1>Student<h1>
   <div class="student">
     <h3>Name: <%= @student.name %></h3><br>
@@ -12,3 +13,4 @@
     <p>Topic: <%= course.topic %></p><br>
   </div><br>
 <% end %>
+</html>
