automatically backed up by learn

--- a/views/student.erb
+++ b/views/student.erb
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+</head>
+<body>
 <h1>Student<h1>
   <div class="student">
     <h3>Name: <%= @student.name %></h3><br>
@@ -13,4 +16,5 @@
     <p>Topic: <%= course.topic %></p><br>
   </div><br>
 <% end %>
+</body>
 </html>
